--- a/Banner.html
+++ b/Banner.html
@@ -2,17 +2,9 @@
   <head>
     <title>Campaign Banner</title>
 
-  <!--  <link rel="stylesheet" href="odometer-theme-car.css" /> -->
-<script src="odometer.js">
-window.odometerOptions = {
-  auto: false, // Don't automatically initialize everything with class 'odometer'
-  selector: '.text_banner1', // Change the selector used to automatically find things to be animated
-  format: '(,ddd).dd', // Change how digit groups are formatted, and how many digits are shown after the decimal point
-  duration: 30000000, // Change how long the javascript expects the CSS animation to take // Specify the theme (if you have more than one theme css file on the page)
-  animation: 'count' // Count is a simpler animation method which just increments the value,
-                     // use it when you're looking for something more subtle.
-};
-</script>
+<link rel="stylesheet" href="odometer-theme-default.css" />
+<script src="odometer.js"></script>
+
 
   </head>
   <body>
@@ -22,9 +14,9 @@ window.odometerOptions = {
 font-weight: 900;font-size: 48px;line-height: 56px;display: flex;align-items: center;text-align: center;color: #FFFFFF;">Our Impact</h2>
       </div>
       <div>
-      <h1 id="text_banner1" style="position: absolute; width: 466.31px;
+      <h1 id="text_banner1" class="text_banner_main" style="position: absolute; width: 466.31px;
 height: 216px;left: 100px;top: 100px;font-family: Bebas;font-style: normal;font-weight: normal;font-size: 180px;line-height: 216px;display: flex;align-items: center;
-text-align: center;color: #FFFFFF;">20K+</h1>
+text-align: center;color: #FFFFFF;">2000</h1>
     </div>
     <div>
     <h1 id="text_banner" style="position: absolute;width: 431.1px;height: 216px;left: 584px;top: 100px;font-family: Bebas;font-style: normal;
@@ -38,6 +30,18 @@ font-weight: normal;font-size: 180px;line-height: 216px;display: flex;align-item
       </div>
 
   </div>
+  <script>
+  var el = document.querySelector('.text_banner_main');
+
+  const odometer = new Odometer({
+    el: el,
+    animation: 'count',
+    duration:1000
+    // Any option (other than auto and selector) can be passed in here
+  });
+  el.innerHTML=20;
+
+  </script>
 
   </body>
 </html>
