--- a/Banner.html
+++ b/Banner.html
@@ -4,7 +4,22 @@
 
 <link rel="stylesheet" href="odometer-theme-default.css" />
 <script src="odometer.js"></script>
-
+<style>
+.text_banner1{
+    visibility:hidden;
+}
+.slideRight {
+    visibility: visible;
+    animation-name: slideRight;
+    -webkit-animation-name: slideRight;
+    animation-duration: 1.5s;
+    -webkit-animation-duration: 1.5s;
+    animation-timing-function: ease-in-out;
+    -webkit-animation-timing-function: ease-in-out;
+}
+</style>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+<script type="text/javascript" src="./javascript.js"></script>
 
   </head>
   <body>
@@ -12,50 +27,76 @@
       <div>
         <h2 id="our_impact" style="position: absolute;width: 300px;height: 36px;left: 632px;top: 70px;font-family:Roboto;font-style: normal;
 font-weight: 900;font-size: 48px;line-height: 56px;display: flex;align-items: center;text-align: center;color: #FFFFFF;">Our Impact</h2>
+
       </div>
       <div>
       <h1 id="text_banner1" class="no_of_actions" style="position: absolute; width: 466.31px;
 height: 216px;left: 100px;top: 100px;font-family: Bebas;font-style: normal;font-weight: normal;font-size: 180px;line-height: 216px;display: flex;align-items: center;
-text-align: center;color: #FFFFFF;">2000</h1>
+text-align: center;color: #FFFFFF;"></h1>
+
+    </div>
+    <div style="margin-left: auto ">
+      <h1 id="text_bannerK+" style="position: absolute; width: 466.31px;
+      height: 216px;left: 300px;top: 100px;font-family: Bebas;font-style: normal;font-weight: normal;font-size: 180px;line-height: 216px;display: flex;align-items: center;
+      text-align: center;color: #FFFFFF;">K+</h1>
     </div>
     <div>
     <h1 id="text_banner" class="no_of_communities" style="position: absolute;width: 431.1px;height: 216px;left: 584px;top: 100px;font-family: Bebas;font-style: normal;
-font-weight: normal;font-size: 180px;line-height: 216px;display: flex;align-items: center;text-align: center;color: #FFFFFF;">105+</h1>
+font-weight: normal;font-size: 180px;line-height: 216px;display: flex;align-items: center;text-align: center;color: #FFFFFF;"></h1>
+
+
+
+  </div>
+  <div>
+    <id="text_banner+" style="position: absolute;width: 431.1px;height: 216px;left: 900px;top: 220px;font-family: Bebas;font-style: normal;
+    font-weight: normal;font-size: 180px;line-height: 216px;display: flex;align-items: center;text-align: center;color: #FFFFFF;">+</h1>
   </div>
     <div>
 
 
       <h1 id="text_banner" class="no_of_rupiah" style="position: absolute;width: 431.1px;height: 216px;left: 1067px;top: 100px;font-family: Bebas;font-style: normal;
-font-weight: normal;font-size: 180px;line-height: 216px;display: flex;align-items: center;text-align: center;color: #FFFFFF;">255+</h1>
+font-weight: normal;font-size: 180px;line-height: 216px;display: flex;align-items: center;text-align: center;color: #FFFFFF;"></h1>
+<h1 style="position: absolute;width: 431.1px;height: 216px;left: 1367px;top: 100px;font-family: Bebas;font-style: normal;
+font-weight: normal;font-size: 180px;line-height: 216px;display: flex;align-items: center;text-align: center;color: #FFFFFF;">+</h1>
       </div>
 
   </div>
-  <script>
+  <script >
+  var y = $(window).height();
+var coord = y / 2;
+
+$(window).scroll(function(){
+    if($(window).scrollTop() > coord){
   var subsometerActions = document.querySelector('.no_of_actions');
   var subsometerCommunities = document.querySelector('.no_of_communities');
 var subsometerRupiah = document.querySelector('.no_of_rupiah');
   const odometer = new Odometer({
     el: subsometerActions,
-    animation: 'count',
+
     duration:500
     // Any option (other than auto and selector) can be passed in here
   });
   const odometer2 = new Odometer({
     el: subsometerCommunities,
-    animation: 'count',
+
     duration:500
     // Any option (other than auto and selector) can be passed in here
   });
   const odometer3 = new Odometer({
     el: subsometerRupiah,
-    animation: 'count',
+
     duration:500
     // Any option (other than auto and selector) can be passed in here
   });
   subsometerActions.innerHTML=20;
+
 subsometerCommunities.innerHTML=105;
 subsometerRupiah.innerHTML=225;
+}
+});
   </script>
+
+
 
   </body>
 </html>
